api-version 加入引號，避免 1.20 被判斷為 1.2

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: PGWhiteList
 main: com.jctpe.pgwhitelist.PGWhiteList
 version: 1.0
-api-version: 1.20
+api-version: '1.20'
 author: JoeTpe_aka_PGCat
 libraries:
   - org.postgresql:postgresql:42.2.27
