將 SqlDriver 參數抽出寫死在 SqlHandler 內，反正也不會變，而且目前只打算支援 postgreSQL

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,7 @@
-enabled-sql: false
+plugin-enable: false
 sql-info:
   address: ""
   port: ""
   username: ""
   password: ""
   db-name: ""
-SqlDriver: "org.postgresql.Driver"
