實裝 `/pg add <playerID>` 的功能，但仍有部分待精進

--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,14 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.5.4</version>
+            <scope>compile</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20230227</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
